Fix About Us section alignment

--- a/assets/stylesheets/components/_about-us.scss
+++ b/assets/stylesheets/components/_about-us.scss
@@ -51,6 +51,7 @@
   flex-direction: column;
 
   @media screen and (min-width: breakpoint('tablet')) {
+    justify-content: flex-end;
     flex-direction: row;
   }
 }
